--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -1,6 +1,6 @@
 name: Deploy Astro to Pages
 on:
-  push: { branches: [main] }
+  push: { branches: [master] }
 permissions: { contents: read, pages: write, id-token: write }
 jobs:
   build:
